@@ -4,6 +4,7 @@ Selenium 2 Beta 4
 * Fix to dictionary returned from size
 * Deprecated value property. Use the get_attribute("value") method
 * Deprecated get_page_source method. Use page_source property
+* Deprecated get_current_window_handle. User current_window_handle property
 
 Selenium 2 Beta 2
 
